# webbit

./: Cargo.toml  LICENSE  rustfmt.toml
src/: component.rs  component_content.rs  context.rs  dynamic_component.rs  lib.rs
src/common/: bounds.rs  color.rs  mod.rs  vector.rs
src/components/: button.rs  checkbox.rs  color_selector.rs  context_menu.rs  group_container.rs  label.rs  mod.rs  resize_canvas.rs  selection_frame.rs  side_bar.rs  slider.rs
src/elements/: mod.rs
src/errors/: console_error_handler.rs  context_in_use_error.rs  error_handling.rs  ignore_err.rs  mod.rs  string_environment.rs  string_error_handler.rs
src/events/: bubble_stopper.rs  custom_event_listener.rs  event_listener.rs  group.rs  mod.rs  shared_event_listener.rs
src/io/: file_io_handler.rs  mod.rs
